Добавлена возможность выбора конкретного типа транспорта

--- a/YarTransport/YarTransportGUI/MainWindow.xaml
+++ b/YarTransport/YarTransportGUI/MainWindow.xaml
@@ -7,21 +7,24 @@
         mc:Ignorable="d"
         Title="YarTransport" Height="640" Width="360" ResizeMode="NoResize">
     <Grid>
-    <Grid Name="Grid_MainWindow" Margin="0,0,4,0">
-        <TextBox Name="TB_PointOfDeparture" Height="23" Margin="11,123,11,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Popup Name="Popup_StationsOfDeparture" Placement="Bottom" PlacementTarget="{Binding ElementName=TB_PointOfDeparture}" MinWidth="318">
-            <StackPanel>
-                <ListBox Name="LB_StationsOfDeparture" PreviewMouseDown="LB_StationsOfDeparture_PreviewMouseDown"/>
-            </StackPanel>
-        </Popup>
-        <TextBox Name="TB_PointOfDestination" Height="23" Margin="11,151,11,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Popup Name="Popup_StationsOfDestination" Placement="Bottom" PlacementTarget="{Binding ElementName=TB_PointOfDestination}" MinWidth="318">
-            <StackPanel>
-                <ListBox Name="LB_StationsOfDestination" PreviewMouseDown="LB_StationsOfDestination_PreviewMouseDown"/>
-            </StackPanel>
-        </Popup>
-        <Button Name="Btn_Search" Content="Поиск" Margin="57,179,57,0" VerticalAlignment="Top" Click="Btn_Search_Click"/>
+        <Grid Name="Grid_MainWindow" Margin="0,0,4,0">
+            <TextBox Name="TB_PointOfDeparture" Height="23" Margin="11,123,11,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+            <Popup Name="Popup_StationsOfDeparture" Placement="Bottom" PlacementTarget="{Binding ElementName=TB_PointOfDeparture}" MinWidth="318">
+                <StackPanel>
+                    <ListBox Name="LB_StationsOfDeparture" PreviewMouseDown="LB_StationsOfDeparture_PreviewMouseDown"/>
+                </StackPanel>
+            </Popup>
+            <TextBox Name="TB_PointOfDestination" Height="23" Margin="11,151,11,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+            <Popup Name="Popup_StationsOfDestination" Placement="Bottom" PlacementTarget="{Binding ElementName=TB_PointOfDestination}" MinWidth="318">
+                <StackPanel>
+                    <ListBox Name="LB_StationsOfDestination" PreviewMouseDown="LB_StationsOfDestination_PreviewMouseDown"/>
+                </StackPanel>
+            </Popup>
+            <Button Name="Btn_Search" Content="Поиск" Margin="57,179,57,0" VerticalAlignment="Top" Click="Btn_Search_Click"/>
             <ListBox Name="LB_Routes" Margin="11,208,11,20" PreviewMouseDoubleClick="LB_Routes_PreviewMouseDoubleClick"/>
+            <CheckBox Name="CB_Bus" Content="Автобус" HorizontalAlignment="Left" Margin="11,43,0,0" VerticalAlignment="Top"/>
+            <CheckBox Name="CB_Trolley" Content="Троллейбус" HorizontalAlignment="Left" Margin="11,63,0,0" VerticalAlignment="Top"/>
+            <CheckBox Name="CB_Tram" Content="Трамвай" HorizontalAlignment="Left" Margin="11,83,0,0" VerticalAlignment="Top"/>
         </Grid>
         <Grid Name="Grid_RouteInfo" HorizontalAlignment="Left" Height="611" VerticalAlignment="Top" Width="350" Visibility="Collapsed">
             <TextBox Name="TB_RouteInfo" Height="536" Margin="10,10,20,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
